tests/NormalTests/paczka1/small_fuzzy/27711689.err
Error in line 4: YTui A956 13,8
Error in line 3: lOFKQEdv S386 94,9
